--- a/Service-Contracts-Commercial-Law.html
+++ b/Service-Contracts-Commercial-Law.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contracts and Commercial Law - M Gregory Legal</title>
-    <link rel="stylesheet" href="Service-Contracts-Commercial-Law.css">
+    <title>Local Government Law - M Gregory Legal</title>
+    <link rel="stylesheet" href="Services.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Roboto:wght@400;700&display=swap">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
@@ -26,7 +26,7 @@
     <main>
         <!-- Banner Image -->
         <section class="banner">
-            <img src="images/signL.jpg" alt="Banner">
+            <img src="images/peopleL.jpg" alt="Banner">
         </section>
 
         <!-- Service Navigation -->
@@ -43,8 +43,8 @@
         <!-- Service Description -->
         <section class="service-description">
             <div class="container">
-                <h1>Contracts and Commercial Law</h1>
-                <p>We negotiate and draft contracts for private clients and governments, in areas including ICT contracts, goods and services, consultancy agreements, native title and Aboriginal heritage agreements, and land development agreements. We also assist with contract disputes.</p>
+                <h1>Local Government Law</h1>
+                <p>We act for local governments and regional councils across Western Australia. We also advise individuals and businesses affected by local government decisions.</p>
             </div>
         </section>
 
