--- a/Service-Local-Government-Law.html
+++ b/Service-Local-Government-Law.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Local Government Law - M Gregory Legal</title>
-    <link rel="stylesheet" href="Service-Local-Government-Law.css">
+    <link rel="stylesheet" href="Services.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Roboto:wght@400;700&display=swap">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
