--- a/Service-Contracts-Commercial-Law.html
+++ b/Service-Contracts-Commercial-Law.html
@@ -26,7 +26,7 @@
     <main>
         <!-- Banner Image -->
         <section class="banner">
-            <img src="images/peopleL.jpg" alt="Banner">
+            <img src="images/signL.jpg" alt="Banner">
         </section>
 
         <!-- Service Navigation -->
@@ -43,8 +43,8 @@
         <!-- Service Description -->
         <section class="service-description">
             <div class="container">
-                <h1>Local Government Law</h1>
-                <p>We act for local governments and regional councils across Western Australia. We also advise individuals and businesses affected by local government decisions.</p>
+                <h1>Contacts and Commercial Law</h1>
+                <p>We negotiate and draft contracts for private clients and governments, including ICT contracts, goods and services contracts, consultancy agreements and land development agreements.</p>
             </div>
         </section>
 
