--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <div class="service">
                         <img src="images/perth-city.jpg" alt="Planning and environmental law">
                         <h3>Planning and environmental law</h3>
-                        <p>We act for local governments, resource companies, property developers and affected residents.</p>
+                        <p>We act for local governments, resource companies, property developers and affected residents and businesses.</p>
                         <a href="Service-Planning-Environmental-Law.html" class="more-info">More Info</a>
                     </div>
                     <div class="service">
@@ -97,7 +97,7 @@
                     <div class="service">
                         <img src="images/sign.jpg" alt="Contracts and commercial law">
                         <h3>Contracts and commercial law</h3>
-                        <p>We negotiate and draft contracts for private clients and governments, in areas including ICT contracts, goods and services, consultancy agreements, native title and Aboriginal heritage agreements and land development agreements. We also assist with contract disputes.</p>
+                        <p>We negotiate and draft contracts for private clients and governments, including ICT contracts, goods and services contracts, consultancy agreements and land development agreements.</p>
                         <a href="Service-Contracts-Commercial-Law.html" class="more-info">More Info</a>
                     </div>
                 </div>
