--- a/Mark-more-info.html
+++ b/Mark-more-info.html
@@ -11,14 +11,28 @@
 <body>
     <header id="header">
         <div class="container">
-            <div class="logo"><a href="index.html#top"><img src="images/MG-logo.png" alt="M Gregory Legal Logo"></a></div>
+            <div class="logo"><a href="index.html"><img src="images/MG-logo.png" alt="M Gregory Legal Logo"></a></div>
             <nav>
-                <ul>
-                    <li><a href="index.html#top">Home</a></li>
+                <ul class="nav-links">
                     <li><a href="index.html#about">About</a></li>
-                    <li><a href="index.html#team">Team</a></li>
+                    <li class="services-dropdown">
+                        <a href="javascript:void(0)" id="services-dropdown-btn">Services</a>
+                        <ul class="dropdown">
+                            <li><a href="Service-Native-Title-Aboriginal-Heritage.html">Native Title</a></li>
+                            <li><a href="Service-Planning-Environmental-Law.html">Planning & Environmental</a></li>
+                            <li><a href="Service-Local-Government-Law.html">Local Government</a></li>
+                            <li><a href="Service-Contracts-Commercial-Law.html">Contracts & Commercial</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="staff.html">People</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
+                <div class="hamburger" id="hamburger">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div class="close-btn" id="close-btn">&times;</div>
             </nav>
         </div>
     </header>
@@ -61,6 +75,7 @@
         </div>
     </footer>
     <script>
+        // Smooth scrolling for navigation links
         document.querySelectorAll('header nav ul li a, .service-nav ul li a').forEach(anchor => {
             anchor.addEventListener('click', function(e) {
                 const href = this.getAttribute('href');
@@ -81,6 +96,29 @@
 
         document.getElementById('contact-phone').textContent = '(08) 9226 0375';
         document.getElementById('contact-email').innerHTML = '<a href="mailto:contact@mgregorylegal.com.au">contact@mgregorylegal.com.au</a>';
+
+        // Toggle hamburger menu
+        document.querySelector('.hamburger').addEventListener('click', function() {
+            document.querySelector('.nav-links').classList.toggle('nav-active');
+            document.querySelector('.hamburger').classList.toggle('toggle');
+            document.querySelector('.close-btn').classList.toggle('visible');
+        });
+
+        // Close hamburger menu
+        document.querySelector('#close-btn').addEventListener('click', function() {
+            document.querySelector('.nav-links').classList.remove('nav-active');
+            document.querySelector('.hamburger').classList.remove('toggle');
+            document.querySelector('.close-btn').classList.remove('visible');
+        });
+
+        // Close hamburger menu on link click
+        document.querySelectorAll('.nav-links a').forEach(link => {
+            link.addEventListener('click', function() {
+                document.querySelector('.nav-links').classList.remove('nav-active');
+                document.querySelector('.hamburger').classList.remove('toggle');
+                document.querySelector('.close-btn').classList.remove('visible');
+            });
+        });
     </script>
 </body>
 </html>
