--- a/staff.html
+++ b/staff.html
@@ -14,7 +14,15 @@
             <nav>
                 <ul class="nav-links">
                     <li><a href="index.html#about">About</a></li>
-                    <li><a href="index.html#services">Services</a></li>
+                    <li class="services-dropdown">
+                        <a href="javascript:void(0)" id="services-dropdown-btn">Services</a>
+                        <ul class="dropdown">
+                            <li><a href="Service-Native-Title-Aboriginal-Heritage.html">Native Title</a></li>
+                            <li><a href="Service-Planning-Environmental-Law.html">Planning & Environmental</a></li>
+                            <li><a href="Service-Local-Government-Law.html">Local Government</a></li>
+                            <li><a href="Service-Contracts-Commercial-Law.html">Contracts & Commercial</a></li>
+                        </ul>
+                    </li>
                     <li><a href="staff.html">People</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -69,36 +77,17 @@
     </footer>
 
     <script>
-        // JavaScript for smooth header transition on scroll
-        window.onscroll = function() {scrollFunction()};
-
-        function scrollFunction() {
-            if (document.body.scrollTop > 80 || document.documentElement.scrollTop > 80) {
-                document.getElementById("header").classList.add("scroll");
-            } else {
-                document.getElementById("header").classList.remove("scroll");
-            }
-        }
-
         // Smooth scrolling for navigation links
-        document.querySelectorAll('header nav ul li a').forEach(anchor => {
+        document.querySelectorAll('header nav ul li a, .service-nav ul li a').forEach(anchor => {
             anchor.addEventListener('click', function(e) {
-                e.preventDefault();
-                const targetId = this.getAttribute('href');
-                if (targetId.startsWith('#')) {
-                    document.querySelector(targetId).scrollIntoView({
+                const href = this.getAttribute('href');
+                if (href.startsWith('#')) {
+                    e.preventDefault();
+                    document.querySelector(href).scrollIntoView({
                         behavior: 'smooth'
                     });
-                } else {
-                    window.location.href = targetId;
                 }
             });
-        });
-
-        // Smooth scrolling for logo link
-        document.querySelector('header .logo a').addEventListener('click', function(e) {
-            e.preventDefault();
-            window.location.href = this.getAttribute('href');
         });
 
         // Toggle hamburger menu
